fix vercel runtime error

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "functions": {
-    "api/*.js": {
-      "runtime": "nodejs18.x"
-    }
-  }
+  "version": 2,
+  "routes": [
+    { "src": "/", "dest": "/index.html" },
+    { "src": "/api/(.*)", "dest": "/api/$1" }
+  ]
 }
